[gd_scene load_steps=3 format=3 uid="uid://dh32u67rv68q2"]

[ext_resource type="Script" path="res://Scripts/credits.gd" id="1_7jw5y"]
[ext_resource type="PackedScene" uid="uid://ovamm1046h7m" path="res://Scenes/test_game2.tscn" id="2_8qvk1"]

[node name="credits" type="Node2D"]
script = ExtResource("1_7jw5y")
play_scene = ExtResource("2_8qvk1")

[node name="TextureRect" type="ColorRect" parent="."]
color = Color(0.328326, 0.545378, 0.587545, 1)

[node name="MenuControl" type="Control" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="TextureRect/MenuControl"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -122.5
offset_top = -63.0
offset_right = 122.5
offset_bottom = 63.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect/MenuControl/CenterContainer"]
layout_mode = 2
alignment = 1

[node name="TitleLabel" type="Label" parent="TextureRect/MenuControl/CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Invasive Species"
horizontal_alignment = 1

[node name="Label" type="Label" parent="TextureRect/MenuControl/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Made by Max Logan & Devon Braner"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="TextureRect/MenuControl/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Dedicated to Emily & Kat :)"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="TextureRect/MenuControl/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "A BIG thank you to the following:"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect/MenuControl/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="TextureRect/MenuControl/CenterContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="Label15" type="Label" parent="TextureRect/MenuControl/CenterContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "kenney.nl"
horizontal_alignment = 1

[node name="Label6" type="Label" parent="TextureRect/MenuControl/CenterContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "for most visual assets"
horizontal_alignment = 1

[node name="Label7" type="Label" parent="TextureRect/MenuControl/CenterContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="Label2" type="Label" parent="TextureRect/MenuControl/CenterContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "GabrielAraujo"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="TextureRect/MenuControl/CenterContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "HenryRichard"
horizontal_alignment = 1

[node name="Label4" type="Label" parent="TextureRect/MenuControl/CenterContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "wyronroberth"
horizontal_alignment = 1

[node name="Label8" type="Label" parent="TextureRect/MenuControl/CenterContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "&"
horizontal_alignment = 1

[node name="Label5" type="Label" parent="TextureRect/MenuControl/CenterContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Josethehedgehog"
horizontal_alignment = 1

[node name="Label9" type="Label" parent="TextureRect/MenuControl/CenterContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "for wonderful audio assets"
horizontal_alignment = 1

[node name="Label10" type="Label" parent="TextureRect/MenuControl/CenterContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="Label11" type="Label" parent="TextureRect/MenuControl/CenterContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "All our wonderful playtesters & You"
horizontal_alignment = 1

[node name="Label12" type="Label" parent="TextureRect/MenuControl/CenterContainer/VBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "&"
horizontal_alignment = 1

[node name="Label13" type="Label" parent="TextureRect/MenuControl/CenterContainer/VBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "You"
horizontal_alignment = 1

[node name="Label14" type="Label" parent="TextureRect/MenuControl/CenterContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "for playing!"
horizontal_alignment = 1

[node name="Label16" type="Label" parent="TextureRect/MenuControl/CenterContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="PlayButton" type="Button" parent="TextureRect/MenuControl/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="QuitButton" type="Button" parent="TextureRect/MenuControl/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="TextureRect/MenuControl/CenterContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="TextureRect/MenuControl/CenterContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
